--- a/index.html
+++ b/index.html
@@ -108,11 +108,12 @@
 
   <!-- First Container -->
   <div class="container-fluid bg-1 text-center" id="home">
-    <div id="register">
-      <h4><a href="https://ee.kobotoolbox.org/x/QDceVL28" style=" color: #337ab7;">Click to 
-        Register here..</a></h4>
+    <div id="home">
+      <h4><a href="https://ee.kobotoolbox.org/x/QDceVL28" style=" color: #337ab7;">
+        Click to Register here..</a>
+      </h4>
     </div>
-   
+
     <h3 class="margin fw-bold">Lets Celebrate Software Freedom Day</h3>
     <p>Software Freedom Day (SFD) is a worldwide celebration of Free and Open Source Software (FOSS). Our goal
       in this celebration which remembers the benefits of free and open software and promotes its use.
@@ -124,7 +125,7 @@
       style="display:inline" alt="Bird" width="350" height="350">
   </div>
 
- 
+
   <!-- Third Container (Grid) -->
   <div class="container-fluid bg-3 text-center">
     <div class="container">
